@@ -1,5 +1,5 @@
 package TestCase::Lib::SPVM::Util {
-  use SPVM::Util(join_object, split, sprintf);
+  use SPVM::Util(split, sprintf);
 
   use SPVM::Unicode (uchar);
   use TestCase::Minimal;
@@ -17,29 +17,6 @@ package TestCase::Lib::SPVM::Util {
     crand,
     srand,
   );
-
-  sub test_join_object : int () {
-
-    my $minimals = [
-      TestCase::Minimal->newp(1, 2),
-      TestCase::Minimal->newp(3, 4),
-      TestCase::Minimal->newp(5, 6)
-    ];
-
-    my $join = join_object(",", $minimals, sub : string ($self : self, $obj : object) {
-      my $minimal = (TestCase::Minimal)$obj;
-      my $x = $minimal->x;
-      my $y = $minimal->y;
-      my $str = "($x,$y)";
-      return $str;
-    });
-
-    if ($join eq "(1,2),(3,4),(5,6)") {
-      return 1;
-    }
-
-    return 0;
-  }
 
   sub test_crand : int () {
     
